[tool.poetry]
name = "airbnb-backend"
version = "0.1.0"
description = ""
authors = ["junyoung <jy940608@naver.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "airbnb_backend"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2"
pillow = "^9.5.0"
djangorestframework = "^3.14.0"
python-dateutil = "^2.8.2"
pyjwt = "^2.6.0"
django-environ = "^0.10.0"
django-cors-headers = "^3.14.0"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
